# toolbox

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
include/aux/: HashMap.h
include/toolbox/: ContainerTransformer.h  Dereference.h  HashKeyValue.h  HashMap.h  IteratorRecorder.h  IteratorTransformer.h  LazyEvaluation.h  Result.h  SequencePredicate.h  Value.h
sh/: rename.sh  replace.sh  reposwitch.sh
src/: ContainerTransformer.cpp  HashKeyValue.cpp  HashMap.cpp  Iterator.cpp  IteratorRecorder.cpp  IteratorTransformer.cpp  Result.cpp  SequencePredicate.cpp  Value.cpp
test/: ContainerTransformer.cpp  HashKeyValue.cpp  IteratorRecorder.cpp  LazyEvaluation.cpp  Result.cpp  SequencePredicate.cpp  TestHashMap.cpp  TestMapAdapter.cpp  Value.cpp
toolbox/: Codec.cpp  Codec.h  ContainerTransformer.h  HashMap.cpp  Iterator.h  IteratorRecorder.h  IteratorTransformer.h  LazyEvaluation.cpp  SequencePredicate.h  Value.h
toolbox/test/: Codec.cpp  ContainerTransformer.cpp  HashMap.cpp  HashMap.h  Iterator.cpp  IteratorRecorder.cpp  IteratorTransformer.cpp  SequencePredicate.cpp  TestHashMap.cpp
